--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>    
     <title>Chats | kakao Clone</title>
-    <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="status-bar">
