--- a/friends.html
+++ b/friends.html
@@ -27,8 +27,7 @@
         </div>
         <div class="header__header-column">
             <span class="header__icon"><i class="fas fa-search"></i></span>
-            <!-- <span class="header__icon"><i class="far fa-comment"></i></span> -->
-            <span class="header__icon"><i class="fas fa-cog"></i></span>
+            <span class="header__icon"><i class="fas fa-bars"></i></span>
         </div>
     </header>
     <main class="friends">
@@ -84,7 +83,6 @@
                 </div>
             </li>
         </ul>
-
     </main>
     <nav class="nav">
         <ul class="nav__list">
