add new css files

--- a/find.html
+++ b/find.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>    
+    <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>
     <title>Find | kakao Clone</title>
 </head>
+
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
@@ -76,11 +78,19 @@
     </main>
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a></li>
-            <li class="nav__list-item"><a href="index.html" class="nav__list-link"><i class="far fa-comment"></i></a></li>
+            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
+                    <i class="far fa-comment"></i>
+                </a>
+            </li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a></li>
-            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a></li>
+            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
+            </li>
         </ul>
     </nav>
 </body>
+
 </html>
