--- a/friends.html
+++ b/friends.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <ul class="friends__list">
-            <h5 class="friend__title">Friends 14</h5>
+            <h5 class="friends__title">Friends 14</h5>
             <li class="friends__friend friend">
                 <div class="friend__column">
                     <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
@@ -86,10 +86,17 @@
     </main>
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="fas fa-user"></i></a></li>
-            <li class="nav__list-item"><a href="index.html" class="nav__list-link"><i class="far fa-comment"></i></a></li>
+            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="fas fa-user"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
+                    <i class="far fa-comment"></i>
+                </a>
+            </li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a></li>
-            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a></li>
+            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
+            </li>
         </ul>
     </nav>
 </body>
