--- a/chat.html
+++ b/chat.html
@@ -8,69 +8,90 @@
     <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>    
     <title>Chat | kakao Clone</title>
 </head>
-<body>
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">13:54</span>
+<body class="chat-body">
+    <div class="header-wrap">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">13:54</span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <i class="fas fa-battery-full"></i>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <i class="fas fa-battery-full"></i>
-            <span class="status-bar__battery-level">100%</span>
-        </div>
+        <header class="header">
+            <div class="header__header-column">
+                <a href="index.html" class="header__back-btn"><i class="fas fa-arrow-left"></i></a>
+                <h1 class="header__title">Best Friend</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon"><i class="fas fa-search"></i></span>
+                <span class="header__icon"><i class="fas fa-bars"></i></span>
+            </div>
+        </header>
     </div>
-    <header class="header">
-        <div class="header__header-column">
-            <a href="index.html" class="header__back-btn"><i class="fas fa-arrow-left"></i></a>
-            <h1 class="header__title">Best Friend</h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header__icon"><i class="fas fa-search"></i></span>
-            <span class="header__icon"><i class="fas fa-bars"></i></span>
-        </div>
-    </header>
-    <main class="chat">
-        <ul class="chat__messages">
-            <span class="chat__timestamp">Friday, January 11, 2020</span>
-            <li class="incoming-message message">
-                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
-                <div class="message__content">
-                    <span class="message__author">Best Friend</span>
-                    <div class="message__bubble">
-                        Congrats I love you!
+    <div class="chat-padding">
+        <main class="chat-screen">
+            <ul class="chat__messages">
+                <span class="chat__timestamp">Friday, January 11, 2020</span>
+                <li class="incoming-message message">
+                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                    <div class="message__content">
+                        <span class="message__author">Best Friend</span>
+                        <div class="message__bubble">
+                            Congrats I love you!
+                        </div>
                     </div>
-                </div>
-                <span class="message__timestemp"></span>
-            </li>
-            <li class="incoming-message message">
-                <span class="message__timestemp"></span>             
-                <div class="message__content">
-                    <span class="message__author">Best Friend</span>
-                    <div class="message__bubble">
-                        Thank you see you soon!
+                    <span class="message__timestemp">08:11</span>
+                </li>
+                <li class="sent-message message">
+                    <span class="message__timestemp">08:11</span>
+                    <div class="message__content">
+                        <div class="message__bubble">
+                            Thank you see you soon!
+                        </div>
                     </div>
-                </div>
-            </li>
-        </ul>
-    </main>
-    <div class="chat__write">
-        <div class="chat__write-column">
-            <i class="far fa-plus-square"></i>
+                </li>
+                <li class="incoming-message message">
+                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                    <div class="message__content">
+                        <span class="message__author">Best Friend</span>
+                        <div class="message__bubble">
+                            You are so beautiful!
+                        </div>
+                    </div>
+                    <span class="message__timestemp">08:11</span>
+                </li>
+                <li class="sent-message message">
+                    <span class="message__timestemp">08:11</span>
+                    <div class="message__content">
+                        <div class="message__bubble">
+                            You also :)
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </main>
+        <div class="chat__write">
+            <div class="chat__write-column">
+                <i class="far fa-plus-square"></i>
+            </div>
+            <div class="chat__write-column">
+                <input type="text" placeholder="Send message" class="chat__write-input">
+            </div>
+            <div class="chat__write-column">
+                <span class="chat__write-icon">
+                    <i class="far fa-smile-wink"></i>
+                </span>
+                <span class="chat__write-icon">
+                    <i class="fas fa-microphone"></i>
+                </span>
+            </div>
         </div>
-        <div class="chat__write-column">
-            <input type="text" placeholder="Send message" class="chat__write-input">
-        </div>
-        <div class="chat__write-column">
-            <span class="chat__write-icon">
-                <i class="far fa-smile-wink"></i>
-            </span>
-            <span class="chat__write-icon">
-                <i class="fas fa-microphone"></i>
-            </span>
-        </div>
+
     </div>
-    
 </body>
 </html>
