--- a/index.html
+++ b/index.html
@@ -35,15 +35,23 @@
         <ul class="chats__list">
             <li class="chats__chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="img/bomi.jpg" alt="" width="100px">
-                        <div class="chat__content">
-                            <span class="chat__ucername">Bomi Yu</span>
-                            <span class="chat__previe">Going home</span>
+                    <div class="chats__chat friend">
+                        <div class="friend__column">
+                            <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Bomi Yu
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat_timestemp">Yesterday</span>
+                        <div class="friend__column">
+                            <span class="chat__timestemp">
+                                March 8
+                            </span>
+                        </div>
                     </div>
                 </a>
             </li>
@@ -51,10 +59,17 @@
     </main>
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a></li>
-            <li class="nav__list-item"><a href="index.html" class="nav__list-link"><i class="fas fa-comment"></i></a></li>
+            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
+                    <i class="fas fa-comment"></i>
+                </a>
+            </li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a></li>
-            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a></li>
+            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
+            </li>
         </ul>
     </nav>
 </body>
