--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="friend__column">
-                    <i class="fas fa-comment-alt fa-2x"></i>
+                    <i class="far fa-comment-alt fa-2x"></i>
                 </div>
             </div>
             <ul class="more__btn-list">
@@ -68,15 +68,15 @@
             <h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
-                    <span class="sugestion__icon"><i class="fas fa-quote-right fa-2x"></i></span>
+                    <span class="suggestion__icon"><i class="fas fa-quote-right fa-2x"></i></span>
                     <span class="suggestion__title">Kakao Story</span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <span class="sugestion__icon"><i class="fas fa-beer fa-2x"></i></span>
+                    <span class="suggestion__icon"><i class="fas fa-beer fa-2x"></i></span>
                     <span class="suggestion__title">Kakao Friends</span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <span class="sugestion__icon"><i class="fas fa-gamepad fa-2x"></i></span>
+                    <span class="suggestion__icon"><i class="fas fa-gamepad fa-2x"></i></span>
                     <span class="suggestion__title">Friends Gem</span>
                 </li>
             </ul>
@@ -84,10 +84,17 @@
     </main>
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a></li>
-            <li class="nav__list-item"><a href="index.html" class="nav__list-link"><i class="far fa-comment"></i></a></li>
+            <li class="nav__list-item"><a href="friends.html" class="nav__list-link"><i class="far fa-user"></i></a>
+            </li>
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
+                    <i class="far fa-comment"></i>
+                </a>
+            </li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link"><i class="fas fa-search"></i></a></li>
-            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a></li>
+            <li class="nav__list-item"><a href="more.html" class="nav__list-link"><i class="fas fa-ellipsis-h"></i></a>
+            </li>
         </ul>
     </nav>
 </body>
