--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>    
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    />
     <title>Chat | kakao Clone</title>
 </head>
 <body class="chat-body">
@@ -75,14 +78,12 @@
                 </li>
             </ul>
         </main>
-        <div class="chat__write">
-            <div class="chat__write-column">
+        <div class="chat__write-container">
+            <input class="chat__write-input" type="text" placeholder="Send message">
+            <div class="chat__icon-left chat__icons">
                 <i class="far fa-plus-square"></i>
             </div>
-            <div class="chat__write-column">
-                <input type="text" placeholder="Send message" class="chat__write-input">
-            </div>
-            <div class="chat__write-column">
+            <div class="chat__icon-right chat__icons">
                 <span class="chat__write-icon">
                     <i class="far fa-smile-wink"></i>
                 </span>
@@ -91,7 +92,9 @@
                 </span>
             </div>
         </div>
-
+    </div>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small</span>
     </div>
 </body>
 </html>
