--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/47f6124380.js" crossorigin="anonymous"></script>    
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+  />   
     <title>Settings | kakao Clone</title>
 </head>
 <body>
