--- a/index.html
+++ b/index.html
@@ -58,6 +58,53 @@
                     </div>
                 </a>
             </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chats__chat friend">
+                        <div class="friend__column">
+                            <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Bomi Yu
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <span class="chat__timestemp">
+                                March 8
+                            </span>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chats__chat friend">
+                        <div class="friend__column">
+                            <div class="avatar-group-2">
+                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                            </div>
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Bomi Yu
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <span class="chat__timestemp">
+                                March 8
+                            </span>
+                        </div>
+                    </div>
+                </a>
+            </li>
         </ul>
     </main>
     <nav class="nav">
