--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             <li class="chats__chat">
                 <a href="chat.html">
                     <div class="chats__chat friend">
-                        <div class="friend__column">
-                            <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                        <div class="friend__column">                            <div class="avatar-group-2">
+                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                            </div>
                             <div class="friend__content">
                                 <span class="friend__name">
                                     Bomi Yu
@@ -84,7 +86,8 @@
                 <a href="chat.html">
                     <div class="chats__chat friend">
                         <div class="friend__column">
-                            <div class="avatar-group-2">
+                            <div class="avatar-group-3">
+                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
                                 <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
                                 <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
                             </div>
