--- a/friends.html
+++ b/friends.html
@@ -12,38 +12,41 @@
     <title>Friends | kakao Clone</title>
 </head>
 <body>
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">13:54</span>
+    <div class="header-wrap">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">13:54</span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <i class="fas fa-battery-full"></i>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <i class="fas fa-battery-full"></i>
-            <span class="status-bar__battery-level">100%</span>
-        </div>
+        <header class="header">
+            <div class="header__header-column">
+                <h1 class="header__title">Friends</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon"><i class="fas fa-search"></i></span>
+                <span class="header__icon"><i class="fas fa-bars"></i></span>
+            </div>
+        </header>        
     </div>
-    <header class="header">
-        <div class="header__header-column">
-            <h1 class="header__title">Friends</h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header__icon"><i class="fas fa-search"></i></span>
-            <span class="header__icon"><i class="fas fa-bars"></i></span>
-        </div>
-    </header>
+    <div class="header-padding"></div>
     <main class="friends">
         <header class="friends__header">
             <div class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                    <img src="img/man2.png" class="g-avatar" alt="" width="100px">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Bohye Yu
+                            LuLu
                         </span>
                         <span class="friend__status">
-                            Hi! there!
+                            루루에오..밥주세오 @0@
                         </span>
                     </div>
                 </div>
@@ -54,10 +57,10 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                    <img src="img/ciao.png" class="g-avatar" alt="" width="100px">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Plus Friend
+                            CIAO
                         </span>
                     </div>
                 </div>
@@ -68,19 +71,57 @@
             <h5 class="friends__title">Friends 14</h5>
             <li class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                    <img src="img/man3.png" class="g-avatar" alt="" width="100px">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Bohye Yu
+                            TiTi
                         </span>
                         <span class="friend__status">
-                            Hi! there!
+                            냥생무상
                         </span>
                     </div>
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span>아이유 - Bloooming</span>
+                        <span>Twice - TT</span>
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+            </li>
+            <li class="friends__friend friend">
+                <div class="friend__column">
+                    <img src="img/man4.png" class="g-avatar" alt="" width="100px">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            ChuChu
+                        </span>
+                        <span class="friend__status">
+                            빈땅콩해적단 모집중
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <div class="friend__now-listening">
+                        <span>원피스 - 주제곡</span>
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+            </li>
+            <li class="friends__friend friend">
+                <div class="friend__column">
+                    <img src="img/man5.png" class="g-avatar" alt="" width="100px">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            MoMo
+                        </span>
+                        <span class="friend__status">
+                            어서 엉덩이나 두들기게
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <div class="friend__now-listening">
+                        <span>Bongchi - 세상은 요지경</span>
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
