--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
     <title>Chats | kakao Clone</title>
 </head>
 <body>
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">13:54</span>
+    <div class="header-wrap">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">13:54</span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <span class="status-bar__battery-level">100%</span>
+                <i class="fas fa-battery-full"></i>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100%</span>
-            <i class="fas fa-battery-full"></i>
-        </div>
+        <header class="header">
+            <div class="header__header-column">
+                <h1 class="header__title">Chats</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon"><i class="fas fa-search"></i></span>
+                <span class="header__icon"><i class="far fa-comment"></i></span>
+                <span class="header__icon"><i class="fas fa-cog"></i></span>
+            </div>
+        </header>
     </div>
-    <header class="header">
-        <div class="header__header-column">
-            <h1 class="header__title">Chats</h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header__icon"><i class="fas fa-search"></i></span>
-            <span class="header__icon"><i class="far fa-comment"></i></span>
-            <span class="header__icon"><i class="fas fa-cog"></i></span>
-        </div>
-    </header>
+    <div class="header-padding"></div>
     <main class="chats">
         <ul class="chats__list">
             <li class="chats__chat">
@@ -43,16 +46,16 @@
                             <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
                             <div class="friend__content">
                                 <span class="friend__name">
-                                    Bomi Yu
+                                    Zipsa
                                 </span>
                                 <span class="friend__bottom-text">
-                                    Going home
+                                    이야 대단한데? 
                                 </span>
                             </div>
                         </div>
                         <div class="friend__column">
                             <span class="chat__timestemp">
-                                March 8
+                                PM 03:34
                             </span>
                         </div>
                     </div>
@@ -61,22 +64,22 @@
             <li class="chats__chat">
                 <a href="chat.html">
                     <div class="chats__chat friend">
-                        <div class="friend__column">                            <div class="avatar-group-2">
-                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
-                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                        <div class="friend__column">                            <div class="avatar-group">
+                                <img src="img/man5.png" class="g-avatar" alt="" width="100px">
+                                <img src="img/man4.png" class="g-avatar" alt="" width="100px">
                             </div>
                             <div class="friend__content">
                                 <span class="friend__name">
-                                    Bomi Yu
+                                    빈땅콩해적단
                                 </span>
                                 <span class="friend__bottom-text">
-                                    Going home
+                                    집사가 자면 털자!!
                                 </span>
                             </div>
                         </div>
                         <div class="friend__column">
                             <span class="chat__timestemp">
-                                March 8
+                                PM 03:00
                             </span>
                         </div>
                     </div>
@@ -86,23 +89,50 @@
                 <a href="chat.html">
                     <div class="chats__chat friend">
                         <div class="friend__column">
-                            <div class="avatar-group-3">
-                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
-                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
-                                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                            <div class="avatar-group g3">
+                                <img src="img/man3.png" class="g-avatar" alt="" width="100px">
+                                <img src="img/man4.png" class="g-avatar" alt="" width="100px">
+                                <img src="img/man5.png" class="g-avatar" alt="" width="100px">
                             </div>
                             <div class="friend__content">
                                 <span class="friend__name">
-                                    Bomi Yu
+                                    츄르계모임
                                 </span>
                                 <span class="friend__bottom-text">
-                                    Going home
+                                    루루 이번달 츄르 좀 내주세요
                                 </span>
                             </div>
                         </div>
                         <div class="friend__column">
                             <span class="chat__timestemp">
-                                March 8
+                                AM 00:31
+                            </span>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chats__chat friend">
+                        <div class="friend__column">
+                            <div class="avatar-group g4">
+                                <img src="img/man5.png" class="g-avatar" alt="" width="100px">
+                                <img src="img/man4.png" class="g-avatar" alt="" width="100px">
+                                <img src="img/man3.png" class="g-avatar" alt="" width="100px">
+                                <img src="img/man2.png" class="g-avatar" alt="" width="100px">
+                            </div>
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    냥팅
+                                </span>
+                                <span class="friend__bottom-text">
+                                    응암동 사는 냥이신분?
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <span class="chat__timestemp">
+                                January 20
                             </span>
                         </div>
                     </div>
