--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
         <header class="header">
             <div class="header__header-column">
                 <a href="index.html" class="header__back-btn"><i class="fas fa-arrow-left"></i></a>
-                <h1 class="header__title">Best Friend</h1>
+                <h1 class="header__title">Zipsa</h1>
             </div>
             <div class="header__header-column">
                 <span class="header__icon"><i class="fas fa-search"></i></span>
@@ -36,63 +36,89 @@
             </div>
         </header>
     </div>
-    <div class="chat-padding">
-        <main class="chat-screen">
-            <ul class="chat__messages">
-                <span class="chat__timestamp">Friday, January 11, 2020</span>
-                <li class="incoming-message message">
-                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
-                    <div class="message__content">
-                        <span class="message__author">Best Friend</span>
-                        <div class="message__bubble">
-                            Congrats I love you!
-                        </div>
+    <div class="header-padding"></div>
+    <main class="chat-screen">
+        <ul class="chat__messages">
+            <span class="chat__timestamp">Friday, January 11, 2020</span>
+            <li class="incoming-message message">
+                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                <div class="message__content">
+                    <span class="message__author">Zipsa</span>
+                    <div class="message__bubble">
+                        루루 카카오톡 클론 다했엉?
                     </div>
-                    <span class="message__timestemp">08:11</span>
-                </li>
-                <li class="sent-message message">
-                    <span class="message__timestemp">08:11</span>
-                    <div class="message__content">
-                        <div class="message__bubble">
-                            Thank you see you soon!
-                        </div>
+                </div>
+                <span class="message__timestemp">08:11</span>
+            </li>
+            <li class="sent-message message">
+                <span class="message__timestemp">08:11</span>
+                <div class="message__content">
+                    <div class="message__bubble">
+                        고럼뇨
                     </div>
-                </li>
-                <li class="incoming-message message">
-                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
-                    <div class="message__content">
-                        <span class="message__author">Best Friend</span>
-                        <div class="message__bubble">
-                            You are so beautiful!
-                        </div>
+                </div>
+            </li>
+            <li class="sent-message message">
+                <span class="message__timestemp">08:11</span>
+                
+                <div class="message__content">
+                    <div class="message__bubble">
+                        3분이묜 오케이에오..!
                     </div>
-                    <span class="message__timestemp">08:11</span>
-                </li>
-                <li class="sent-message message">
-                    <span class="message__timestemp">08:11</span>
-                    <div class="message__content">
-                        <div class="message__bubble">
-                            You also :)
-                        </div>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                <div class="message__content">
+                    <span class="message__author">Zipsa</span>
+                    <div class="message__bubble">
+                        우래기 다해쪄요? 어디보쟈
                     </div>
-                </li>
-            </ul>
-        </main>
-        <div class="chat__write-container">
-            <input class="chat__write-input" type="text" placeholder="Send message">
-            <div class="chat__icon-left chat__icons">
-                <i class="far fa-plus-square"></i>
-            </div>
-            <div class="chat__icon-right chat__icons">
-                <span class="chat__write-icon">
-                    <i class="far fa-smile-wink"></i>
-                </span>
-                <span class="chat__write-icon">
-                    <i class="fas fa-microphone"></i>
-                </span>
-            </div>
+                </div>
+                <span class="message__timestemp">08:11</span>
+            </li>
+            <li class="sent-message message">
+                <span class="message__timestemp">08:11</span>
+                <div class="message__content">
+                    <div class="message__bubble">
+                        <a href="https://bomee88.github.io/kakao-clone">https://bomee88.github.io/kakao-clone</a>
+                    </div>
+
+                    <div class="url-area">
+                        <a href="https://bomee88.github.io/kakao-clone">
+                            <span class="img-area"></span>
+                            <span class="url-text">Chats | kakao Clone<em>여기를 눌러 링크를 확인하세요.</em></span>
+                        </a>
+                    </div>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                <div class="message__content">
+                    <span class="message__author">Zipsa</span>
+                    <div class="message__bubble">
+                        이야 대단한데? 어디서 약탈했구마!
+                    </div>
+                </div>
+                <span class="message__timestemp">08:11</span>
+            </li>
+        </ul>
+    </main>
+    <div class="chat__write-container">
+        <input class="chat__write-input" type="text" placeholder="Send message">
+        <div class="chat__icon-left chat__icons">
+            <i class="far fa-plus-square"></i>
+        </div>
+        <div class="chat__icon-right chat__icons">
+            <span class="chat__write-icon">
+                <i class="far fa-smile-wink"></i>
+            </span>
+            <span class="chat__write-icon">
+                <i class="fas fa-microphone"></i>
+            </span>
         </div>
     </div>
+
     <div class="bigScreen">
         <span class="bigScreen__text">Please make your screen small</span>
     </div>
