--- a/find.html
+++ b/find.html
@@ -14,28 +14,31 @@
 </head>
 
 <body>
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">13:54</span>
+    <div class="header-wrap">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">13:54</span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <i class="fas fa-battery-full"></i>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <i class="fas fa-battery-full"></i>
-            <span class="status-bar__battery-level">100%</span>
-        </div>
+        <header class="header">
+            <div class="header__header-column">
+                <h1 class="header__title">Find</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon"><i class="fas fa-search"></i></span>
+                <!-- <span class="header__icon"><i class="far fa-comment"></i></span> -->
+                <!-- <span class="header__icon"><i class="fas fa-cog"></i></span> -->
+            </div>
+        </header>
     </div>
-    <header class="header">
-        <div class="header__header-column">
-            <h1 class="header__title">Find</h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header__icon"><i class="fas fa-search"></i></span>
-            <!-- <span class="header__icon"><i class="far fa-comment"></i></span> -->
-            <span class="header__icon"><i class="fas fa-cog"></i></span>
-        </div>
-    </header>
+    <div class="header-padding"></div>
     <main class="find">
         <header class="find__header">
             <ul class="find__header-list">
@@ -60,13 +63,13 @@
                 <h5 class="find__title">Recomended Friends</h5>
                 <li class="find__friend friend">
                     <div class="friend__column">
-                        <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                        <img src="img/man6.png" class="g-avatar" alt="" width="100px">
                         <div class="friend__content">
                             <span class="friend__name">
-                                Bohye Yu
+                                CoCo
                             </span>
                             <span class="friend__status">
-                                Hi! there!
+                                약탈 꿈나무
                             </span>
                         </div>
                     </div>
