--- a/more.html
+++ b/more.html
@@ -12,39 +12,42 @@
     <title>More | kakao Clone</title>
 </head>
 <body>
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">13:54</span>
+    <div class="header-wrap">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">13:54</span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <i class="fas fa-battery-full"></i>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <i class="fas fa-battery-full"></i>
-            <span class="status-bar__battery-level">100%</span>
-        </div>
+        <header class="header">
+            <div class="header__header-column">
+                <h1 class="header__title">More</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon"><i class="fas fa-search"></i></span>
+                <span class="header__icon"><i class="fas fa-qrcode"></i></span>
+                <span class="header__icon"><a href="settings.html"><i class="fas fa-cog"></i></a></span>
+            </div>
+        </header>
     </div>
-    <header class="header">
-        <div class="header__header-column">
-            <h1 class="header__title">More</h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header__icon"><i class="fas fa-search"></i></span>
-            <span class="header__icon"><i class="fas fa-qrcode"></i></span>
-            <span class="header__icon"><a href="settings.html"><i class="fas fa-cog"></i></a></span>
-        </div>
-    </header>
+    <div class="header-padding"></div>
     <main class="more">
         <header class="more__header">
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="img/bomi.jpg" class="g-avatar" alt="" width="100px">
+                    <img src="img/man2.png" class="g-avatar" alt="" width="100px">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Bohye Yu
+                            LuLu
                         </span>
                         <span class="friend__status">
-                            bomee88@naver.com
+                            lulu@bidae.no
                         </span>
                     </div>
                 </div>
