--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="LuLu KaKao"" />
+    <meta property="og:url" content="https://bomee88.github.io/kakao-clone/" />
+    <meta property="og:description" content="루루 카톡창이에오" />
+    <meta property="og:image" content="img/man2.png")" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <meta property="og:site_name" content="https://bomee88.github.io/kakao-clone/" />
+    <meta property="og:type" content="website" /></code>
     <link rel="stylesheet" href="css/style.css">
     <link
       rel="stylesheet"
