--- a/friends.html
+++ b/friends.html
@@ -121,7 +121,8 @@
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span>Bongchi - 세상은 요지경</span>
+                        <span>모모랜드 - 뿜뿜
+                        </span>
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
