--- a/friends.html
+++ b/friends.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span>원피스 - 주제곡</span>
+                        <span>Apink - Mr.Chu</span>
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
